--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
    "devDependencies": {
       "tailwindcss": "^3.4.14"
    },
+   "type": "module",
    "name": "group_four",
    "version": "1.0.0",
    "main": "tailwind.config.js",
