--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "name": "group_four",
    "version": "1.0.0",
    "main": "tailwind.config.js",
+   "type": "module",
    "scripts": {
       "dev": "npx tailwindcss -i ./src/assets/css/input.css -o ./src/assets/css/output.css --watch"
    },
@@ -14,6 +15,7 @@
       "any-promise": "^1.3.0",
       "anymatch": "^3.1.3",
       "arg": "^5.0.2",
+      "axios": "^1.7.7",
       "balanced-match": "^1.0.2",
       "binary-extensions": "^2.3.0",
       "brace-expansion": "^2.0.1",
